# pxModel

./: .gitignore  AGENTS.md  PLAN-yolo-package-gate.md  README.md  compare_backbones.py  config.py  evaluate.py  export.py  export_all_backbones.sh  export_tflite.py  model.py  predict.py  pyproject.toml  quantize_all_backbones.sh  requirements.txt  train.py  train_all_backbones.sh  upload_to_roboflow.py
android/: build.gradle.kts  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/pxmodel/classifier/: Classifier.kt  MainActivity.kt  PackageGate.kt
android/app/src/main/res/drawable/: model_badge_background.xml  preview_background.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
annotator/: app.py  run.sh
annotator/static/: index.html
augment/: augment_plastic_wrap.py  run.sh
checkpoints/: comparison_results.md
data/: annotations.csv
pxmodel/: __init__.py  augmentation.py  benchmark.py  compare_backbones.py  config.py  dataset_multilabel.py  evaluate.py  export.py  export_all_backbones.py  labels.py  model.py  predict.py  predict_onnx.py  quantize.py  quantize_all_backbones.py  train.py  train_all_backbones.py  validate_data.py  yolo_package.py
