[project]
name = "pxmodel"
version = "0.2.0"
description = "Multi-label image classifier with training, inference, export, and quantization pipelines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=1.3.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "torch>=2.1",
    "torchvision>=0.16",
    "ai-edge-torch>=0.8.0",
]
